v20.10/de/_sources/components.rst.txt
Softwaremodule

Der

rc_visard

 wird mit einer Reihe von On-Board-Softwaremodulen mit verschiedenen
Funktionalitäten ausgeliefert. Jedes Softwaremodul bietet über seinen
zugehörigen

Node

 eine

REST-API-Schnittstelle

 als Programmierschnittstelle an.

Die Module für die

Stereokamera

 und das

Stereo-Matching

, welche die Stereo-Bildpaare und die 3D-Tiefeninformationen
bereitstellen, sind auch über die

GigE Vision/GenICam-Schnittstelle

 des

rc_visard

 konfigurierbar.

Abb. 19

 gibt einen Überblick über die Beziehungen zwischen den verschiedenen
Softwaremodulen und den Daten, die sie über die verschiedenen

Schnittstellen

 des

rc_visard

 bereitstellen.


Bemerkung: Module, die mit

  optional

   gekennzeichnet sind, erweitern die Funktionalität des

  rc_visard

  . Kunden können ihre Lizenz erweitern, um zusätzliche Module zu
  erwerben.

Die Basis-Software des

rc_visard

 umfasst folgende Module:

Stereokamera (rc_stereocamera, Abschnitt \ref{stereo_camera:sect-
stereo-camera})  erfasst Stereo-Bildpaare und führt die planare
Rektifizierung durch, wodurch die Stereokamera als Messinstrument
verwendet werden kann. Bilder werden sowohl für die weitere interne
Verarbeitung durch andere Module als auch als GenICam-Bild-Streams für
die externe Verwendung bereitgestellt.

Stereo-Matching (rc_stereomatching, Abschnitt \ref{stereo_matching
:sect-stereo-matching})  nutzt die rektifizierten Stereo-Bildpaare, um
3D-Tiefeninformationen, z.B. für Disparitäts-, Fehler- und
Konfidenzbilder, zu berechnen. Diese werden auch als GenICam-Bild-
Streams bereitgestellt.

Sensordynamik (rc_dynamics, Abschnitt \ref{dynamics:sect-dynamics}.)
erstellt Schätzungen des dynamischen Zustands des rc_visard, d.h.
seiner Pose, Geschwindigkeit und Beschleunigung. Diese Zustände werden
als kontinuierliche Datenströme über die rc_dynamics-Schnittstelle
übertragen. Zu diesem Zweck verwaltet und verknüpft das Dynamik-Modul
Daten aus den folgenden Submodulen:  Visuelle Odometrie
(rc_stereovisodo, Abschnitt \ref{stereo_visodo:sect-visual-odometry})
schätzt die Bewegung des rc_visard anhand der Bewegungen
charakteristischer Merkmale in den Bildern der linken Kamera.  Stereo-
INS (rc_stereo_ins, Abschnitt \ref{stereo_ins:sect-stereo-ins})
kombiniert die per visueller Odometrie ermittelten Werte mit den Daten
der integrierten inertialen Messeinheit (IMU), um auf dieser Grundlage
akkurate und hochfrequente Echtzeit-Zustandsschätzungen
bereitzustellen.

Kamerakalibrierung (rc_stereocalib, Abschnitt \ref{camera_calibration
:sect-camera-calibration})  überprüft automatisch die Kalibrierung der
Stereokamera des rc_visard und führt die Selbstkalibrierung durch,
sofern sich diese verstellt hat. Mit diesem Modul kann der Benutzer
zudem eine manuelle Neukalibrierung über die Web GUI\:(Abschnitt
\ref{installation:sect-web-gui}) vornehmen.

Hand-Auge-Kalibrierung (rc_hand_eye_calibration, Abschnitt
\ref{handeye_calibration:sect-handeye-calibration})  ermöglicht dem
Benutzer, die Kamera entweder über die Web GUI oder die REST-API zu
einem Roboter zu kalibrieren.

IOControl und Projektor-Kontrolle (rc_iocontrol, Abschnitt
\ref{iocontrol:sect-iocontrol})  bietet die Kontrolle über die Ein-
und Ausgänge des rc_visard mit speziellen Betriebsarten zur Kontrolle
eines externen Musterprojektors.

TagDetect (rc_april_tag_detect und rc_qr_code_detect, Abschnitt
\ref{tagdetect:sect-tag-detection})  ermöglicht die Erkennung von
AprilTags und QR-Codes sowie die Schätzung von deren Pose.

